rename shadow api -> states api
update rest mappings as well to be below /devices/{id}
